# testparser

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py  test_testparser.py  testparser.py
testparser/: __main__.py  parsers.py
tests/: test_testparser.py
tests/do/: g100_do_pic.htm  g100_do_pic.txt
tests/evsmu/: g493_mytestx_u.txt  g495.htm  g495_anki.csv  g495_crib.txt  g495_mytestx.txt  testing.txt
tests/gift/: moodle_gift.txt  moodle_mytestx.txt
tests/imsqti/: imsqti_v2p1_question_TQ670105.mytestx.txt  imsqti_v2p1_question_TQ670105.xml  imsqti_v2p2_multichoise2.mytestx.txt  imsqti_v2p2_multichoise2.xml  mytestx.txt
tests/mytestx/: quiz_guileful.txt  quiz_guileful_anki.csv  quiz_guileful_crib.txt  quiz_guileful_mytestx.txt  quiz_sorted.txt  quiz_unsorted.txt  quiz_unsorted_duplicates.txt
tests/raw/: raw.mytestx.txt  raw.txt
vsmu/: __main__.py  main.py
